tests/script_errors/lexer_bad_hex3/error.txt
Error: 
    1 | let f = 0x;
      |         ^^ An invalid hexadecimal
